--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <a href="index.html"><img class=header-logo-sp src="images/common/sp/header_logo_sp.png" alt=""></a>
 
     <!-- hamberger -->
+
+    <!-- backup -->
+    <!-- 
     <nav class="hamburger-wrapper">
       <ul class="hamburger-nav">
         <li class="hamburger-item"><a href="index.html">ホーム</a></li>
@@ -54,6 +57,50 @@
         <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#document-request">資料請求</a></li>
         <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#other">その他お問い合わせ</a></li>
       </ul>
+    </nav>
+     -->
+
+    <nav class="hamburger-wrapper">
+      <div class="hamburger-lists">
+        <div class="hamburger-list-01">
+          <ul class="hamburger-items">
+            <li class="hamburger-item"><a href="index.html">ホーム</a></li>
+            <li class="hamburger-item"><a href="about/index.html">プリンス進学塾について</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-feature">特徴</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-greeting">塾長あいさつ</a></li>
+          </ul>
+        </div>
+
+        <div class="hamburger-list-02">
+          <ul class="hamburger-items">
+            <li class="hamburger-item"><a href="elementary/index.html">小学生</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-policy">指導方針</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-schedule">時間割</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-fee">料金</a></li>
+          </ul>
+        </div>
+
+        <div class="hamburger-list-03">
+          <ul class="hamburger-items">
+            <li class="hamburger-item"><a href="faq/index.html">よくあるご質問</a></li>
+            <li class="hamburger-item"><a href="access/index.html">アクセス</a></li>
+            <li class="hamburger-item"><a href="contact/index.html">お問い合わせ</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#trial-lesson">無料体験授業</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#document-request">資料請求</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#other">その他お問い合わせ</a></li>
+          </ul>
+        </div>
+
+        <div class="hamburger-list-04">
+          <ul class="hamburger-items">
+            <li class="hamburger-item"><a href="juniorhighschool/index.html">中学生</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-policy">指導方針</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-schedule">時間割</a></li>
+            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-fee">料金</a></li>
+          </ul>
+        </div>
+      </div>
+
     </nav>
 
     <div class="burger-btn">
