--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
         <div class="subtitle effect-fade">
           <h2>プリンス進学塾について</h2>
         </div>
-        <p class="inquiry-text effect-fade">八戸市二十三日町にある、<br>
-          小中学生を対象とした小さな学習塾です。<br>
-          わかりやすく効果的な学習法を追究し、<br>
+        <p class="inquiry-text effect-fade">八戸市二十三日町にある<br>
+          小・中学生を対象とした小さな学習塾です。<br>
+          わかりやすく効果的な学習法を追究し<br>
           これまで1000人以上の生徒を<br class="sp-new-line">志望校に合格させてきました。<br>
-          未来にはばたく子どもたちの夢の実現のために、<br>
-          教師も生徒も、共にがんばっています。
+          未来にはばたく子供たちの夢の実現のために<br>
+          教師も生徒も共にがんばっています。
         </p>
         <div class="access-menubar effect-fade">
           <a href="about/index.html#about-feature" class="menubar">
