--- a/juniorhighschool/index.html
+++ b/juniorhighschool/index.html
@@ -288,7 +288,7 @@
         <div class="junior-fee-text effect-fade">
           <p>・別途消費税（10%）がかかります。</p>
           <p>・施設維持費や冷暖房費などの諸経費は、<br>&nbsp;&nbsp;年間を通じて０円です。</p>
-          <p>・兄弟姉妹で受講する場合、<br>&nbsp;&nbsp;下のお子さまの授業料が毎月10％オフとなります。</p>
+          <p>・兄弟姉妹で受講する場合、<br>&nbsp;&nbsp;下のお子さまの授業料が毎月10%OFFとなります。</p>
           <p>・中３の講習会と模擬テストは別料金になります。</p>
           <p>・「一斉＋個別（英･数･国･社･理から選択）」コースも<br>&nbsp;&nbsp;ございます。詳しくは直接お問い合わせください。</p>
         </div>
