--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <!-- <link rel="apple-touch-icon" href="images/common/touch-icon.png"> -->
 <!-- <link rel="shortcut icon" href="images/common/favicon.ico"> -->
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 <link rel="shortcut icon" href="images/common/hp/favicon.ico">
+<script src="https://kit.fontawesome.com/2eae2ccfec.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -33,50 +33,23 @@
     <a href="index.html"><img class=header-logo-sp src="images/common/sp/header_logo_sp.png" alt=""></a>
 
     <!-- hamberger -->
-
-    <!-- backup -->
-    <!-- 
-    <nav class="hamburger-wrapper">
-      <ul class="hamburger-nav">
-        <li class="hamburger-item"><a href="index.html">ホーム</a></li>
-        <li class="hamburger-item"><a href="about/index.html">プリンス進学塾について</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-feature">特徴</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-greeting">塾長あいさつ</a></li>
-        <li class="hamburger-item"><a href="elementary/index.html">小学生</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-policy">指導方針</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-schedule">時間割</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-fee">料金</a></li>
-        <li class="hamburger-item"><a href="juniorhighschool/index.html">中学生</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-policy">指導方針</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-schedule">時間割</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-fee">料金</a></li>
-        <li class="hamburger-item"><a href="faq/index.html">よくあるご質問</a></li>
-        <li class="hamburger-item"><a href="access/index.html">アクセス</a></li>
-        <li class="hamburger-item"><a href="contact/index.html">お問い合わせ</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#trial-lesson">無料体験授業</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#document-request">資料請求</a></li>
-        <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#other">その他お問い合わせ</a></li>
-      </ul>
-    </nav>
-     -->
-
     <nav class="hamburger-wrapper">
       <div class="hamburger-lists">
         <div class="hamburger-list-01">
           <ul class="hamburger-items">
             <li class="hamburger-item"><a href="index.html">ホーム</a></li>
             <li class="hamburger-item"><a href="about/index.html">プリンス進学塾について</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-feature">特徴</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-greeting">塾長あいさつ</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="about/index.html#about-feature">特徴</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="about/index.html#about-greeting">塾長あいさつ</a></li>
           </ul>
         </div>
 
         <div class="hamburger-list-02">
           <ul class="hamburger-items">
             <li class="hamburger-item"><a href="elementary/index.html">小学生</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-policy">指導方針</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-schedule">時間割</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-fee">料金</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="elementary/index.html#ele-policy">指導方針</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="elementary/index.html#ele-schedule">時間割</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="elementary/index.html#ele-fee">料金</a></li>
           </ul>
         </div>
 
@@ -85,18 +58,18 @@
             <li class="hamburger-item"><a href="faq/index.html">よくあるご質問</a></li>
             <li class="hamburger-item"><a href="access/index.html">アクセス</a></li>
             <li class="hamburger-item"><a href="contact/index.html">お問い合わせ</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#trial-lesson">無料体験授業</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#document-request">資料請求</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#other">その他お問い合わせ</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="contact/index.html#trial-lesson">無料体験授業</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="contact/index.html#document-request">資料請求</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="contact/index.html#other">その他お問い合わせ</a></li>
           </ul>
         </div>
 
         <div class="hamburger-list-04">
           <ul class="hamburger-items">
             <li class="hamburger-item"><a href="juniorhighschool/index.html">中学生</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-policy">指導方針</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-schedule">時間割</a></li>
-            <li class="hamburger-item hamburger-subitem"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-fee">料金</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="juniorhighschool/index.html#juni-policy">指導方針</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="juniorhighschool/index.html#juni-schedule">時間割</a></li>
+            <li class="hamburger-item hamburger-subitem"><a href="juniorhighschool/index.html#juni-fee">料金</a></li>
           </ul>
         </div>
       </div>
@@ -113,14 +86,15 @@
     <div class="header-btns">
       <a href="contact/index.html#trial-lesson">
         <div class="experience-btn">
-          <p><span class="fa fa-pencil experience-btn-text">無料体験授業/資料請求</span></p>
+          <p class="experience-btn-text">無料体験授業/資料請求</p>
         </div>
       </a>
       <a href="tel:0178221355">
+        
         <div class="tel-btn">
-          <div class="tel-btn-inner">
-            <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 16:00〜21:30</span></p>
+          <div class="tel-btn-inner header-tel">
+            <p class="tel-number">0178-22-1355</p>
+            <p class="tel-time">受付時間 &nbsp;月〜土曜 16:00〜21:30</p>
           </div>
         </div>
       </a>
@@ -312,8 +286,6 @@
           <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer" class="menubar">
             <div class="facebook-menu">
               <div class="home-facebook">
-                <img class="home-facebook-icon-pc" src="images/common/hp/facebook_white.png" alt="">
-                <img class="home-facebook-icon-sp" src="images/common/sp/facebook_white.png" alt="">
               </div>
               <div class="home-notice-sns-text">
                 <p>プリンス進学塾<br>
@@ -376,9 +348,9 @@
       
       <a href="tel:0178221355">
         <div class="tel-box">
-          <div class="tel-btn-inner">
-            <p><span class="fa fa-phone tel-number">0178-22-1355</span></p>
-            <p><span class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</span></p>
+          <div class="tel-btn-inner footer-tel">
+            <p class="tel-number">0178-22-1355</p>
+            <p class="tel-time">受付時間 &nbsp;月〜土曜 &nbsp;16:00〜21:30</p>
           </div>
         </div>
       </a>
@@ -392,24 +364,24 @@
         <ul>
           <li class="footer-item"><a href="index.html">ホーム</a></li>
           <li class="footer-item"><a href="about/index.html">プリンス進学塾とは</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-feature">特徴</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="about/index.html#about-greeting">塾長あいさつ</a></li>
+          <li class="footer-sub-item"><a href="about/index.html#about-feature">特徴</a></li>
+          <li class="footer-sub-item"><a href="about/index.html#about-greeting">塾長あいさつ</a></li>
         </ul>
       </div>
       <div class="footer-nav02">
         <ul>
           <li class="footer-item"><a href="elementary/index.html">小学生</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-policy">指導方針</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-schedule">時間割</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="elementary/index.html#ele-fee">料金</a></li>
+          <li class="footer-sub-item"><a href="elementary/index.html#ele-policy">指導方針</a></li>
+          <li class="footer-sub-item"><a href="elementary/index.html#ele-schedule">時間割</a></li>
+          <li class="footer-sub-item"><a href="elementary/index.html#ele-fee">料金</a></li>
         </ul>
       </div>
       <div class="footer-nav03">
         <ul>
           <li class="footer-item"><a href="juniorhighschool/index.html">中学生</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-policy">指導方針</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-schedule">時間割</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="juniorhighschool/index.html#juni-fee">料金</a></li>
+          <li class="footer-sub-item"><a href="juniorhighschool/index.html#juni-policy">指導方針</a></li>
+          <li class="footer-sub-item"><a href="juniorhighschool/index.html#juni-schedule">時間割</a></li>
+          <li class="footer-sub-item"><a href="juniorhighschool/index.html#juni-fee">料金</a></li>
         </ul>
       </div>
       <div class="footer-nav04">
@@ -417,9 +389,9 @@
           <li class="footer-item"><a href="faq/index.html">よくあるご質問</a></li>
           <li class="footer-item"><a href="access/index.html">アクセス</a></li>
           <li class="footer-item"><a href="contact/index.html">お問い合わせ</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#trial-lesson">無料体験授業</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#document-request">資料請求</a></li>
-          <li class="footer-sub-item"><span class="fa fa-chevron-circle-right chevron"></span><a href="contact/index.html#other">その他お問い合わせ</a></li>
+          <li class="footer-sub-item"><a href="contact/index.html#trial-lesson">無料体験授業</a></li>
+          <li class="footer-sub-item"><a href="contact/index.html#document-request">資料請求</a></li>
+          <li class="footer-sub-item"><a href="contact/index.html#other">その他お問い合わせ</a></li>
         </ul>
       </div>
     </div>
