--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <!-- header -->
 <header class="header">
   <div class="header-icons">
-    <a href="index.html"><img class=header-logo src="images/common/hp/header_logo_hp.png" alt=""></a>
-    <a href="index.html"><img class=header-logo-sp src="images/common/sp/header_logo_sp.png" alt=""></a>
+    <a href="index.html"><img class=header-logo src="images/common/hp/header_logo_hp.png" alt="プリンス進学塾"></a>
+    <a href="index.html"><img class=header-logo-sp src="images/common/sp/header_logo_sp.png" alt="プリンス進学塾"></a>
 
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
@@ -143,15 +143,15 @@
   <section class="eyechatch eyechatch-home">
     <div class="eyechatch-pc-sliders" id="slider">
       <div class="eyechatch-pc-item">
-        <img class="eyechatch-pc-img" src="images/home/hp/mv_sakura_01_hp.jpg" alt="">
+        <img class="eyechatch-pc-img" src="images/home/hp/mv_sakura_01_hp.jpg" alt="桜の前に立つ女子中学生">
         <h1 class="home-eyechatch-text">ひとりひとりの<br>チカラを信じる</h1>
       </div>
       <div class="eyechatch-pc-item">
-        <img class="eyechatch-pc-img" src="images/home/hp/mv_sakura_02_hp.jpg" alt="">
+        <img class="eyechatch-pc-img" src="images/home/hp/mv_sakura_02_hp.jpg" alt="笑顔の女子中学生">
         <h1 class="home-eyechatch-text">ひとりひとりの<br>チカラを信じる</h1>
       </div>
       <div class="eyechatch-pc-item">
-        <img class="eyechatch-pc-img" src="images/home/hp/mv_sakura_03_hp.jpg" alt="">
+        <img class="eyechatch-pc-img" src="images/home/hp/mv_sakura_03_hp.jpg" alt="桜を見上げる女子中学生">
         <h1 class="home-eyechatch-text">ひとりひとりの<br>チカラを信じる</h1>
       </div>
     </div>
@@ -160,15 +160,15 @@
   <section class="eyechatch-sp">
     <div class="eyechatch-sp-sliders" id="slider_sp">
       <div class="eyechatch-sp-item">
-        <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_01_sp.jpg" alt="">
+        <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_01_sp.jpg" alt="桜の前に立つ女子中学生">
         <h1 class="home-eyechatch-text-sp">ひとり<br>ひとりの<br>チカラを<br>信じる</h1>
       </div>
       <div class="eyechatch-sp-item">
-        <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_02_sp.jpg" alt="">
+        <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_02_sp.jpg" alt="笑顔の女子中学生">
         <h1 class="home-eyechatch-text-sp">ひとり<br>ひとりの<br>チカラを<br>信じる</h1>
       </div>
       <div class="eyechatch-sp-item">
-        <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_03_sp.jpg" alt="">
+        <img class="eyechatch-sp-img" src="images/home/sp/mv_sakura_03_sp.jpg" alt="桜を見上げる女子中学生">
         <h1 class="home-eyechatch-text-sp">ひとり<br>ひとりの<br>チカラを<br>信じる</h1>
       </div>
     </div>
@@ -179,8 +179,8 @@
   <section class="home-about">
     <div class="home-inquiry">
       <div class="inquiry-img img-wrap">
-        <img class="inquiry-pc-img" src="images/home/hp/desk_hp.jpg" alt="">
-        <img class="inquiry-sp-img" src="images/home/sp/desk_sp.jpg" alt="">
+        <img class="inquiry-pc-img" src="images/home/hp/desk_hp.jpg" alt="教室の机">
+        <img class="inquiry-sp-img" src="images/home/sp/desk_sp.jpg" alt="教室の机">
       </div>
        
 
@@ -219,8 +219,8 @@
 
     <div class="home-elementary">
       <div class="course-img img-wrap">
-        <img class="course-pc-img" src="images/home/hp/e_boy_hp.jpg" alt="">
-        <img class="course-sp-img" src="images/home/sp/e_boy_sp.jpg" alt="">
+        <img class="course-pc-img" src="images/home/hp/e_boy_hp.jpg" alt="授業を受ける男子小学生">
+        <img class="course-sp-img" src="images/home/sp/e_boy_sp.jpg" alt="授業を受ける男子小学生">
       </div>
 
       <div class="access-menubar effect-fade">
@@ -233,8 +233,8 @@
 
     <div class="home-juniorhischool">
       <div class="course-img img-wrap">
-        <img class="course-pc-img" src="images/home/hp/j_girl_hp.jpg" alt="">
-        <img class="course-sp-img" src="images/home/sp/j_girl_sp.jpg" alt="">
+        <img class="course-pc-img" src="images/home/hp/j_girl_hp.jpg" alt="授業を受ける女子中学生">
+        <img class="course-sp-img" src="images/home/sp/j_girl_sp.jpg" alt="授業を受ける女子中学生">
       </div>
 
       <div class="access-menubar effect-fade">
@@ -279,8 +279,8 @@
     <div class="home-notice-list">
       <div class="home-notice-sns">
         <div class="home-course-img img-wrap">
-          <img class="course-pc-img" src="images/home/hp/test_hp.jpg" alt="">
-          <img class="course-sp-img" src="images/home/sp/test_sp.jpg" alt="">
+          <img class="course-pc-img" src="images/home/hp/test_hp.jpg" alt="テストを受ける中学生">
+          <img class="course-sp-img" src="images/home/sp/test_sp.jpg" alt="テストを受ける中学生">
         </div>
         <div class="access-menubar">
           <a href="https://www.facebook.com/prince.hachinohe" target="_blank" rel="noopener noreferrer" class="menubar">
@@ -298,8 +298,8 @@
 
       <div class="home-notice-contact">
         <div class="home-course-img img-wrap">
-          <img class="course-pc-img" src="images/home/hp/studying_text_hp.jpg" alt="">
-          <img class="course-sp-img" src="images/home/sp/studying_text_sp.jpg" alt="">
+          <img class="course-pc-img" src="images/home/hp/studying_text_hp.jpg" alt="テキストの問題を解く姿">
+          <img class="course-sp-img" src="images/home/sp/studying_text_sp.jpg" alt="テキストの問題を解く姿">
         </div>
         <div class="access-menubar">
           <a href="contact/index.html#other" class="menubar"><span>お問い合わせはこちら</span></a>
@@ -342,8 +342,8 @@
 
     <div class="logo-and-access">
       <a href="index.html">
-        <img class="footer-pc-logo" src="images/common/hp/footer_logo_hp.png" alt="">
-        <img class="footer-sp-logo" src="images/common/sp/footer_logo_sp.png" alt="">
+        <img class="footer-pc-logo" src="images/common/hp/footer_logo_hp.png" alt="プリンス進学塾">
+        <img class="footer-sp-logo" src="images/common/sp/footer_logo_sp.png" alt="プリンス進学塾">
       </a>
       
       <a href="tel:0178221355">
