小学生　alt属性

--- a/elementary/index.html
+++ b/elementary/index.html
@@ -26,8 +26,8 @@
 <!-- header -->
 <header class="header">
   <div class="header-icons">
-    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
-    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
+    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt="プリンス進学塾"></a>
+    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt="プリンス進学塾"></a>
 
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
@@ -159,23 +159,23 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img effect-fade" src="../images/elementary/hp/01_hp.png" alt="数字01">
-          <img class="number-sp-img effect-fade" src="../images/elementary/sp/01_blue_sp.png" alt="数字01">
+          <img class="number-pc-img effect-fade" src="../images/elementary/hp/01_hp.png" alt="01">
+          <img class="number-sp-img effect-fade" src="../images/elementary/sp/01_blue_sp.png" alt="01">
           <h3 class="policy-item-title effect-fade">分かりやすく<br class="not-new-line">ていねいに教えます</h3>
           <p class="policy-item-text effect-fade">小学校で学ぶ内容は一生の知識のもととなる、とても重要なものばかりです。<br>
             塾では教科書に沿って分かりやすくていねいに教え、将来の勉強に必要な学力がしっかり身につくよう、責任を持ってご指導いたします。
           </p>
         </div>
         <div class="policy-item-img img-wrap">
-          <img class="policy-item-pc-img" src="../images/elementary/hp/pencil_hp.jpg" alt="鉛筆を持って問題を解く">
-          <img class="policy-item-sp-img" src="../images/elementary/sp/pencil_sp.jpg" alt="鉛筆を持って問題を解く">
+          <img class="policy-item-pc-img" src="../images/elementary/hp/pencil_hp.jpg" alt="問題を解く姿">
+          <img class="policy-item-sp-img" src="../images/elementary/sp/pencil_sp.jpg" alt="問題を解く姿">
         </div>
       </div>
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img effect-fade" src="../images/elementary/hp/02_hp.png" alt="数字02">
-          <img class="number-sp-img effect-fade" src="../images/elementary/sp/02_blue_sp.png" alt="数字02">
+          <img class="number-pc-img effect-fade" src="../images/elementary/hp/02_hp.png" alt="02">
+          <img class="number-sp-img effect-fade" src="../images/elementary/sp/02_blue_sp.png" alt="02">
           <h3 class="policy-item-title effect-fade">勉強の苦手をなくします</h3>
           <p class="policy-item-text effect-fade">小学生の時期に苦手ができると、中学・高校へ行ってからたいへん苦労します。<br>
             塾では「DB（データベース）学習システム」を使用してコンピューターでつまずきのポイントを分析、たくさんの問題の中から一人ひとりの弱点にあわせた対策問題を作成して苦手を克服します。
@@ -189,16 +189,16 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img effect-fade" src="../images/elementary/hp/03_hp.png" alt="数字03">
-          <img class="number-sp-img effect-fade" src="../images/elementary/sp/03_blue_sp.png" alt="数字03">
+          <img class="number-pc-img effect-fade" src="../images/elementary/hp/03_hp.png" alt="03">
+          <img class="number-sp-img effect-fade" src="../images/elementary/sp/03_blue_sp.png" alt="03">
           <h3 class="policy-item-title effect-fade">基礎力を伸ばし、<br>がんばる力を育てます</h3>
           <p class="policy-item-text effect-fade">基礎力がつくと、いろいろな問題が正確にかつ速く解けるようになります。
             塾では重要問題の反復学習に加えて、難易度の高い問題にも挑戦させ、粘り強く考える力を育てます。「分からない」が「分かる」ようになり、学ぶことが楽しくなるようにご指導します。
           </p>
         </div>
         <div class="policy-item-img img-wrap">
-          <img class="policy-item-pc-img" src="../images/elementary/hp/wallpaper_green_hp.jpg" alt="壁紙が緑色の教室">
-          <img class="policy-item-sp-img" src="../images/elementary/sp/wallpaper_green_sp.jpg" alt="壁紙が緑色の教室">
+          <img class="policy-item-pc-img" src="../images/elementary/hp/wallpaper_green_hp.jpg" alt="教室">
+          <img class="policy-item-sp-img" src="../images/elementary/sp/wallpaper_green_sp.jpg" alt="教室">
         </div>
       </div>
     </div>
@@ -324,8 +324,8 @@
       </div>
 
       <div class="fee-item-04 img-wrap">
-        <img class="fee-item-pc-img" src="../images/elementary/hp/e_girl_hp.jpg" alt="女子小学生">
-        <img class="fee-item-sp-img" src="../images/elementary/sp/e_girl_sp.jpg" alt="女子小学生">
+        <img class="fee-item-pc-img" src="../images/elementary/hp/e_girl_hp.jpg" alt="笑顔の女子小学生">
+        <img class="fee-item-sp-img" src="../images/elementary/sp/e_girl_sp.jpg" alt="笑顔の女子小学生">
       </div>
     </div>
   </section>
@@ -382,8 +382,8 @@
 
     <div class="logo-and-access">
       <a href="../index.html">
-        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
-        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="">
+        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="プリンス進学塾">
+        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="プリンス進学塾">
       </a>
       
       <a href="tel:0178221355">
