中学生　alt属性

--- a/juniorhighschool/index.html
+++ b/juniorhighschool/index.html
@@ -26,8 +26,8 @@
 <!-- header -->
 <header class="header">
   <div class="header-icons">
-    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
-    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
+    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt="プリンス進学塾"></a>
+    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt="プリンス進学塾"></a>
 
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
@@ -158,38 +158,38 @@
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/01_hp.png" alt="数字01">
-          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/01_blue_sp.png" alt="数字01">
+          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/01_hp.png" alt="01">
+          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/01_blue_sp.png" alt="01">
           <h3 class="policy-item-title effect-fade">万全の定期テストと受験対策</h3>
           <p class="policy-item-text effect-fade">中１・中２・中３とも、定期テスト時にはそれぞれの学校のテスト範囲にピッタリ合わせた予想問題を出題します。一人ひとりの弱点対策問題とあわせて、効率よくテスト勉強をすることができます。<br>
             また高校受験期になると、出題頻度・重要度の高い問題に焦点を絞って徹底した受験指導を行い、志望校合格のために万全を期します。
           </p>
         </div>
         <div class="policy-item-img img-wrap">
-          <img class="policy-item-pc-img" src="../images/juniorhighschool/hp/wallpaper_green_hp.jpg" alt="鉛筆を持って問題を解く">
-          <img class="policy-item-sp-img" src="../images/juniorhighschool/sp/wallpaper_green_sp.jpg" alt="鉛筆を持って問題を解く">
+          <img class="policy-item-pc-img" src="../images/juniorhighschool/hp/wallpaper_green_hp.jpg" alt="問題を解く姿">
+          <img class="policy-item-sp-img" src="../images/juniorhighschool/sp/wallpaper_green_sp.jpg" alt="問題を解く姿">
         </div>
       </div>
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/02_hp.png" alt="数字02">
-          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/02_blue_sp.png" alt="数字02">
+          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/02_hp.png" alt="02">
+          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/02_blue_sp.png" alt="02">
           <h3 class="policy-item-title effect-fade">基礎と応用の定着化</h3>
           <p class="policy-item-text effect-fade">過去の入試問題を詳細に分析し塾独自に開発した暗記シートやトレーニングシートを、授業に活用しています。<br>
             重要問題を反復して演習することにより、問題を速く正確に解く基礎力と、難易度の高い問題を粘り強く解く応用力を強化します。
           </p>
         </div>
         <div class="policy-item-img img-wrap">
-          <img class="policy-item-pc-img" src="../images/juniorhighschool/hp/pencil_hp.jpg" alt="壁紙が緑色の教室">
-          <img class="policy-item-sp-img" src="../images/juniorhighschool/sp/pencil_sp.jpg" alt="壁紙が緑色の教室">
+          <img class="policy-item-pc-img" src="../images/juniorhighschool/hp/pencil_hp.jpg" alt="教室">
+          <img class="policy-item-sp-img" src="../images/juniorhighschool/sp/pencil_sp.jpg" alt="教室">
         </div>
       </div>
 
       <div class="policy-item">
         <div class="policy-item-content">
-          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/03_hp.png" alt="数字03">
-          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/03_blue_sp.png" alt="数字03">
+          <img class="number-pc-img effect-fade" src="../images/juniorhighschool/hp/03_hp.png" alt="03">
+          <img class="number-sp-img effect-fade" src="../images/juniorhighschool/sp/03_blue_sp.png" alt="03">
           <h3 class="policy-item-title effect-fade">苦手の発見と克服</h3>
           <p class="policy-item-text effect-fade">中学生の勉強は、どうしても自分の好きなところ、学習しやすいところに偏りがちです。<br>
             塾では「DB（データベース）学習システム」を使用してコンピューターでつまずきのポイントを分析、およそ32万の問題から一人ひとりの弱点に合わせた対策問題を作成して苦手を克服します。
@@ -316,8 +316,8 @@
       </div>
 
       <div class="fee-item-04 img-wrap">
-        <img class="fee-item-pc-img" src="../images/juniorhighschool/hp/j_girl_hp.jpg" alt="女子中学生">
-        <img class="fee-item-sp-img" src="../images/juniorhighschool/sp/j_girl_sp.jpg" alt="女子中学生">
+        <img class="fee-item-pc-img" src="../images/juniorhighschool/hp/j_girl_hp.jpg" alt="笑顔の女子中学生">
+        <img class="fee-item-sp-img" src="../images/juniorhighschool/sp/j_girl_sp.jpg" alt="笑顔の女子中学生">
       </div>
     </div>
   </section>
@@ -373,8 +373,8 @@
 
     <div class="logo-and-access">
       <a href="../index.html">
-        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
-        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="">
+        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="プリンス進学塾">
+        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="プリンス進学塾">
       </a>
       
       <a href="tel:0178221355">
