--- a/contact/index.html
+++ b/contact/index.html
@@ -26,8 +26,8 @@
 <!-- header -->
 <header class="header">
   <div class="header-icons">
-    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
-    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
+    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt="プリンス進学塾"></a>
+    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt="プリンス進学塾"></a>
 
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
@@ -139,8 +139,8 @@
   <!-- eyechatch -->
   <section class="eyechatch" id="top">
     <div class="eyechatch-inner img-wrap">
-      <img class="eyechatch-pc-img" src="../images/contact/hp/mv_notes_hp.jpg" alt="">
-      <img class="eyechatch-sp-img" src="../images/contact/sp/mv_notes_sp.jpg" alt="">
+      <img class="eyechatch-pc-img" src="../images/contact/hp/mv_notes_hp.jpg" alt="ノートと筆記用具">
+      <img class="eyechatch-sp-img" src="../images/contact/sp/mv_notes_sp.jpg" alt="ノートと筆記用具">
       <h1 class="eyechatch-text">お問い合わせ</h1>
     </div>
   </section>
@@ -150,8 +150,8 @@
   <section class="inquiries" id="trial-lesson">
     <div class="access-inquiry contact-inquiry">
       <div class="inquiry-img img-wrap">
-        <img class="inquiry-pc-img" src="../images/contact/hp/contact_girls_hp.jpg" alt="">
-        <img class="inquiry-sp-img" src="../images/contact/sp/contact_girls_sp.jpg" alt="">
+        <img class="inquiry-pc-img" src="../images/contact/hp/contact_girls_hp.jpg" alt="授業中の女子学生">
+        <img class="inquiry-sp-img" src="../images/contact/sp/contact_girls_sp.jpg" alt="授業中の女子学生">
       </div>
       <div class="inquiry-texts">
         <p class="subtitle-top effect-fade">塾の雰囲気を知りたい方</p>
@@ -174,8 +174,8 @@
 
     <div class="access-inquiry contact-inquiry reverse" id="document-request">
       <div class="inquiry-img img-wrap">
-        <img class="inquiry-pc-img" src="../images/contact/hp/mother_and_daughter_hp.jpg" alt="">
-        <img class="inquiry-sp-img" src="../images/contact/sp/mother_and_daughter_sp.jpg" alt="">
+        <img class="inquiry-pc-img" src="../images/contact/hp/mother_and_daughter_hp.jpg" alt="母と相談する娘">
+        <img class="inquiry-sp-img" src="../images/contact/sp/mother_and_daughter_sp.jpg" alt="母と相談する娘">
       </div>
       <div class="inquiry-texts">
         <p class="subtitle-top effect-fade">じっくり検討したい方</p>
@@ -198,8 +198,8 @@
 
     <div class="access-inquiry contact-inquiry" id="other">
       <div class="inquiry-img img-wrap">
-        <img class="inquiry-pc-img" src="../images/contact/hp/parent_and_child_hp.jpg" alt="">
-        <img class="inquiry-sp-img" src="../images/contact/sp/parent_and_child_sp.jpg" alt="">
+        <img class="inquiry-pc-img" src="../images/contact/hp/parent_and_child_hp.jpg" alt="勉強中の子供と見守る母">
+        <img class="inquiry-sp-img" src="../images/contact/sp/parent_and_child_sp.jpg" alt="勉強中の子供と見守る母">
       </div>
       <div class="inquiry-texts">
         <p class="subtitle-top effect-fade">中３講習会、全県テスト関連もこちら</p>
@@ -255,8 +255,8 @@
 
     <div class="logo-and-access">
       <a href="../index.html">
-        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
-        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="">
+        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="プリンス進学塾">
+        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="プリンス進学塾">
       </a>
       
       <a href="tel:0178221355">
