--- a/access/index.html
+++ b/access/index.html
@@ -26,8 +26,8 @@
 <!-- header -->
 <header class="header">
   <div class="header-icons">
-    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
-    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
+    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt="プリンス進学塾"></a>
+    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt="プリンス進学塾"></a>
 
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
@@ -139,8 +139,8 @@
   <!-- eyechatch -->
   <section class="eyechatch">
     <div class="eyechatch-inner img-wrap">
-      <img class="eyechatch-pc-img" src="../images/access/hp/mv_clock_hp.jpg" alt="">
-      <img class="eyechatch-sp-img" src="../images/access/sp/mv_clock_sp.jpg" alt="">
+      <img class="eyechatch-pc-img" src="../images/access/hp/mv_clock_hp.jpg" alt="時計とノート">
+      <img class="eyechatch-sp-img" src="../images/access/sp/mv_clock_sp.jpg" alt="時計とノート">
       <h1 class="eyechatch-text">アクセス</h1>
     </div>
   </section>
@@ -172,8 +172,8 @@
   <section>
     <div class="access-inquiry">
       <div class="inquiry-img img-wrap">
-        <img class="inquiry-pc-img" src="../images/access/hp/prince_entrance_hp.jpg" alt="">
-        <img class="inquiry-sp-img" src="../images/access/sp/prince_entrance_sp.jpg" alt="">
+        <img class="inquiry-pc-img" src="../images/access/hp/prince_entrance_hp.jpg" alt="プリンス進学塾の外観">
+        <img class="inquiry-sp-img" src="../images/access/sp/prince_entrance_sp.jpg" alt="プリンス進学塾の外観">
       </div>
  
       <div class="inquiry-texts">
@@ -227,8 +227,8 @@
 
     <div class="logo-and-access">
       <a href="../index.html">
-        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
-        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="">
+        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="プリンス進学塾">
+        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="プリンス進学塾">
       </a>
       
       <a href="tel:0178221355">
