--- a/faq/index.html
+++ b/faq/index.html
@@ -27,8 +27,8 @@
 <!-- header -->
 <header class="header">
   <div class="header-icons">
-    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt=""></a>
-    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt=""></a>
+    <a href="../index.html"><img class=header-logo src="../images/common/hp/header_logo_hp.png" alt="プリンス進学塾"></a>
+    <a href="../index.html"><img class=header-logo-sp src="../images/common/sp/header_logo_sp.png" alt="プリンス進学塾"></a>
 
     <!-- hamberger -->
     <nav class="hamburger-wrapper">
@@ -140,8 +140,8 @@
   <!-- eyechatch -->
   <section class="eyechatch">
     <div class="eyechatch-inner img-wrap">
-      <img class="eyechatch-pc-img" src="../images/faq/hp/mv_ringnote_hp.jpg" alt="">
-      <img class="eyechatch-sp-img" src="../images/faq/sp/mv_ringnote_sp.jpg" alt="">
+      <img class="eyechatch-pc-img" src="../images/faq/hp/mv_ringnote_hp.jpg" alt="リングノート">
+      <img class="eyechatch-sp-img" src="../images/faq/sp/mv_ringnote_sp.jpg" alt="リングノート">
       <h1 class="eyechatch-text faq">よくあるご質問</h1>
     </div>
   </section>
@@ -227,8 +227,8 @@
   <section>
     <div class="access-inquiry faq-inquiry">
       <div class="inquiry-img img-wrap">
-        <img class="inquiry-pc-img" src="../images/faq/hp/3pencils_hp.jpg" alt="">
-        <img class="inquiry-sp-img" src="../images/faq/sp/3pencils_sp.jpg" alt="">
+        <img class="inquiry-pc-img" src="../images/faq/hp/3pencils_hp.jpg" alt="鉛筆">
+        <img class="inquiry-sp-img" src="../images/faq/sp/3pencils_sp.jpg" alt="鉛筆">
       </div>
       <div class="inquiry-texts">
         <p class="inquiry-text effect-fade">その他のご質問、<br>
@@ -281,8 +281,8 @@
 
     <div class="logo-and-access">
       <a href="../index.html">
-        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="">
-        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="">
+        <img class="footer-pc-logo" src="../images/common/hp/footer_logo_hp.png" alt="プリンス進学塾">
+        <img class="footer-sp-logo" src="../images/common/sp/footer_logo_sp.png" alt="プリンス進学塾">
       </a>
       
       <a href="tel:0178221355">
