--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-<link rel="shortcut icon" href="images/common/hp/favicon.ico">
+<link rel="shortcut icon" href="images/common/hp/favicon.ico">	
+<link rel="apple-touch-icon" sizes="180x180" href="images/common/sp/apple-touch-icon.png">
 <script src="https://kit.fontawesome.com/2eae2ccfec.js" crossorigin="anonymous"></script>
 </head>
 <body>
