apple-touch-icon

--- a/about/index.html
+++ b/about/index.html
@@ -12,13 +12,12 @@
 <meta property="og:site_name" content="プリンス進学塾">
 <meta property="og:description" content="ひとりひとりにあった問題で弱点を克服し、多くの学生を志望校へ合格させる青森県八戸市の「プリンス進学塾」について紹介します。">
 <meta name="format-detection" content="telephone=no">
-<!-- <link rel="apple-touch-icon" href="images/common/touch-icon.png"> -->
-<!-- <link rel="shortcut icon" href="images/common/favicon.ico"> -->
 
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="shortcut icon" href="../images/common/hp/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="../images/common/sp/apple-touch-icon.png">
 <script src="https://kit.fontawesome.com/2eae2ccfec.js" crossorigin="anonymous"></script>
 </head>
 <body>
