--- a/access/index.html
+++ b/access/index.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="../css/reset.css">
 <link rel="stylesheet" href="../css/style.css">
 <link rel="shortcut icon" href="../images/common/hp/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="../images/common/sp/apple-touch-icon.png">
 <script src="https://kit.fontawesome.com/2eae2ccfec.js" crossorigin="anonymous"></script>
 </head>
 <body>
