access frame border

--- a/access/index.html
+++ b/access/index.html
@@ -150,7 +150,7 @@
   <section> 
     <div class="access-map">
       <div class="map-outer">
-        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.533106947983!2d141.4846764154797!3d40.507706379354595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9b520991f652c3%3A0x1f79258b713c7165!2z44OX44Oq44Oz44K56YCy5a2m5aG-!5e0!3m2!1sja!2sjp!4v1605499007052!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3033.533106947983!2d141.4846764154797!3d40.507706379354595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f9b520991f652c3%3A0x1f79258b713c7165!2z44OX44Oq44Oz44K56YCy5a2m5aG-!5e0!3m2!1sja!2sjp!4v1605499007052!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
     <div class="access-texts">
