リンク変更

--- a/faq/index.html
+++ b/faq/index.html
@@ -81,7 +81,7 @@
     <!-- /hamberger -->
     
     <div class="header-btns">
-      <a href="contact/index.html#trial-lesson">
+      <a href="../contact/index.html#trial-lesson">
         <div class="experience-btn">
           <p class="experience-btn-text">無料体験授業/資料請求</p>
         </div>
