--- a/contact/index.html
+++ b/contact/index.html
@@ -309,7 +309,7 @@
     </div>
   </div>
   <div class="copyright">
-    <small class="copyrights">&copy;copyright プリンス進学塾 all rights reserved.</small>
+    <small class="copyrights">&copy; 2021 プリンス進学塾</small>
   </div>
 </footer>
 <!-- /footer -->
