experience-btn-pc

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
     <div class="header-btns">
       <a href="contact/index.html#trial-lesson">
-        <div class="experience-btn">
+        <div class="experience-btn  experience-btn-pc">
           <p class="experience-btn-text">無料体験授業/資料請求</p>
         </div>
       </a>
